--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -3,7 +3,7 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
-    permissions:
+    permissions: runneradmin
       contents: read
       packages: write
       id-token: write
