--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -4,7 +4,7 @@ jobs:
 
     runs-on: ubuntu-latest
     permissions: runneradmin
-      contents: read
+      contents: write
       packages: write
       id-token: write
 
