--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -4,21 +4,21 @@ on: workflow_dispatch
 jobs:
   build:
 
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-latest
     timeout-minutes: 9999
 
     steps:
       - name: Install Docker
       - run: |
-          sudo apt-get update
-          sudo apt-get install \
-          ca-certificates \
-          curl \
-          gnupg \
-          lsb-release
-          sudo mkdir -p /etc/apt/keyrings
-          curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo gpg --dearmor -o /etc/apt/keyrings/docker.gpg
-          sudo apt-get update
-          sudo apt-get install docker-ce docker-ce-cli containerd.io docker-compose-plugin
-          sudo service docker start
-          sudo docker run hello-world
+            sudo apt-get update
+            sudo apt-get install \
+            ca-certificates \
+            curl \
+            gnupg \
+            lsb-release
+            sudo mkdir -p /etc/apt/keyrings
+            curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo gpg --dearmor -o /etc/apt/keyrings/docker.gpg
+            sudo apt-get update
+            sudo apt-get install docker-ce docker-ce-cli containerd.io docker-compose-plugin
+            sudo service docker start
+            sudo docker run hello-world
