--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -11,11 +11,10 @@ jobs:
       - name: Install Docker
       - run: |
             sudo apt-get update
-            sudo apt-get install \
-            ca-certificates \
-            curl \
-            gnupg \
-            lsb-release
+            sudo apt-get install ca-certificates
+            sudo apt-get install curl
+            sudo apt-get install gnupg
+            sudo apt-get install lsb-release
             sudo mkdir -p /etc/apt/keyrings
             curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo gpg --dearmor -o /etc/apt/keyrings/docker.gpg
             sudo apt-get update
